log
Thu May 12 16:59:36 -04 2022: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
097ebfb
Thu May 12 17:08:02 -04 2022: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  0|5
total_score: 0/70
2ab28bd
Thu May 12 17:09:18 -04 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
7464c81
Thu May 12 17:11:41 -04 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
4cb671d
Thu May 12 17:14:01 -04 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
7a17535
Thu May 12 17:16:45 -04 2022: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
b7c3495
Thu May 12 17:33:53 -04 2022: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:
./sudoku.c:56:45: error: equality comparison result unused [-Werror,-Wunused-comparison]
      if (arreglo[cont] == 0) arreglo[cont] == 1;
                              ~~~~~~~~~~~~~~^~~~
./sudoku.c:56:45: note: use '=' to turn this equality comparison into an assignment
      if (arreglo[cont] == 0) arreglo[cont] == 1;
                                            ^~
                                            =
1 error generated.
Compilation failed
f7387fe
Thu May 12 17:34:06 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
44c88fb
Thu May 12 17:34:31 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8f2dc1d
Thu May 12 17:39:01 -04 2022: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
88724de
Thu May 12 17:41:19 -04 2022: 
 sudoku.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
4092345
Thu May 12 17:41:50 -04 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
9958f66
Thu May 12 17:45:00 -04 2022: 
 sudoku.c | 17 ++++++-----------
 1 file changed, 6 insertions(+), 11 deletions(-)
 tests:  2|4
total_score: 15/70
eaa0d3f
Thu May 12 17:45:34 -04 2022: 
 sudoku.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
76ed94b
Thu May 12 17:45:53 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
fe9ec0c
Thu May 12 17:49:16 -04 2022: 
 sudoku.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
c8d4a0a
Thu May 12 17:49:37 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
4b0d6cc
Thu May 12 17:53:01 -04 2022: 
 sudoku.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
98946d7
Thu May 12 18:57:37 -04 2022: 
 sudoku.c | 21 ++++++++++++++++-----
 1 file changed, 16 insertions(+), 5 deletions(-)
In file included from test.c:5:
./sudoku.c:49:19: error: unused variable 'numero' [-Werror,-Wunused-variable]
  int i, j, k, p, numero;
                  ^
1 error generated.
Compilation failed
1e894e3
Thu May 12 18:57:47 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
6403802
Thu May 12 19:04:20 -04 2022: 
 sudoku.c | 27 ++++++++++++++++++++++-----
 1 file changed, 22 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 15/70
c3b7f90
Thu May 12 19:09:25 -04 2022: 
 sudoku.c | 21 +++++++--------------
 1 file changed, 7 insertions(+), 14 deletions(-)
 tests:  2|4
total_score: 15/70
7fbe11a
Thu May 12 19:10:33 -04 2022: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  2|4
total_score: 15/70
1183489
Thu May 12 19:14:38 -04 2022: 
 sudoku.c | 19 ++++++-------------
 1 file changed, 6 insertions(+), 13 deletions(-)
 tests:  2|4
total_score: 15/70
560b948
Thu May 12 19:19:29 -04 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
d866996
Thu May 12 19:19:52 -04 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
875fd1f
Thu May 12 19:22:41 -04 2022: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
961ce1f
Thu May 12 19:23:19 -04 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
./sudoku.c:50:16: error: unused variable 'p' [-Werror,-Wunused-variable]
  int i, j, k, p, numero;
               ^
./sudoku.c:49:8: error: unused variable 'arreglo2' [-Werror,-Wunused-variable]
  int *arreglo2;
       ^
./sudoku.c:50:13: error: unused variable 'k' [-Werror,-Wunused-variable]
  int i, j, k, p, numero;
            ^
3 errors generated.
Compilation failed
ded766a
Thu May 12 19:23:48 -04 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
db468cd
Thu May 12 19:26:33 -04 2022: 
 sudoku.c | 19 -------------------
 1 file changed, 19 deletions(-)
 tests:  5|3
total_score: 35/70
4d9ef17
Thu May 12 19:32:09 -04 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
b970c09
Thu May 12 19:48:11 -04 2022: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  5|3
total_score: 35/70
a619428
Thu May 12 19:52:29 -04 2022: 
 sudoku.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
30096ab
Thu May 12 19:53:06 -04 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
4e1d7f9
Thu May 12 19:55:23 -04 2022: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
4008d03
Thu May 12 20:01:06 -04 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
9f84d3b
Thu May 12 21:46:11 -04 2022: 
 sudoku.c | 32 +++++++++++++++++++++++++++-----
 1 file changed, 27 insertions(+), 5 deletions(-)
 tests:  5|3
total_score: 35/70
88cb847
Thu May 12 21:46:51 -04 2022: 
 sudoku.c | 25 ++-----------------------
 1 file changed, 2 insertions(+), 23 deletions(-)
 tests:  5|3
total_score: 35/70
87d83bc
Thu May 12 22:00:51 -04 2022: 
 sudoku.c | 31 ++++++++++++++++++++++++++-----
 1 file changed, 26 insertions(+), 5 deletions(-)
 tests:  0|0
8c88284
Thu May 12 22:35:07 -04 2022: 
 sudoku.c | 28 +++++++++++++++++-----------
 1 file changed, 17 insertions(+), 11 deletions(-)
 tests:  5|3
total_score: 35/70
848a925
 tests:  0|0
total_score: 35/70
985085d
Fri May 13 11:20:19 -04 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|2
total_score: 45/70
792fc38
